refactor(server): rename index.js to server.js and update package.json
Update main entry point and start script to reflect new filename
Add DATABASE_NAME to MongoDB connection configuration

--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,10 @@
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
-  "scripts": {
-    "start": "nodemon index.js"
+  "scripts": {  
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
